# kaban

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  _config.yml  cmake_output.txt  ideas.txt  imgui.ini  index.html  launch.json  perf.data  perf.data.old  resources.hpp  vcpkg.json
.github/workflows/: build-release.yml  ci-cd.yml
.github/workflows/images/: Dockerfile
app/: CMakeLists.txt  main.cpp
app/assets/: resource_manager.hpp  texture_manager.hpp
app/bit/: bitops.hpp
app/board/: bitboard.hpp  castling.hpp  color.hpp  direction.hpp  en_passant.hpp  file.hpp  halfmove.hpp  move.hpp  move_type.hpp  navigation.hpp  piece.hpp  piece_type.hpp  promotion.hpp  rank.hpp  square.hpp  state.hpp
app/chess/: CMakeLists.txt
app/chess/core/: app_info.hpp  bit_operations.hpp  strong_value.hpp
app/chess/engine/: engine.hpp  evaluation.hpp  history.hpp
app/chess/position/: magics.hpp  move_list.hpp  position.cpp  position.hpp
app/chess/types/: bitboard.hpp  color.hpp  direction.hpp  file.hpp  move_flag.hpp  piece.hpp  piece_type.hpp  rank.hpp  square.hpp  undo_info.hpp
app/core/: app_info.hpp  iterator.hpp  metadata.hpp  strong.hpp  strong_value.hpp
app/engine/: engine.hpp
app/game/: app_state.hpp  game.hpp  position.cpp  position.hpp  session.hpp
app/gui/: glfw_wrapper.cpp  glfw_wrapper.hpp  gui.hpp  gui_component.hpp  gui_context.hpp  gui_state.hpp  imgui_wrapper.cpp  imgui_wrapper.hpp  window_registry.hpp
app/gui/components/: board_view.hpp  captured_pieces.hpp  demo_window.hpp  game_view.hpp  main_menu.hpp
app/interface/gui/: CMakeLists.txt  dimensions.hpp  gl_includes.hpp  glfw_wrapper.cpp  glfw_wrapper.hpp  gui.hpp  imgui_wrapper.cpp  imgui_wrapper.hpp  main.cpp  rect.hpp  window_registry.hpp
app/interface/gui/components/: board_view.hpp  demo_window.hpp  game_info.hpp  game_view.hpp  main_menu.hpp
app/interface/gui/resources/: resource_manager.hpp  texture_manager.cpp  texture_manager.hpp
app/interface/uci/: CMakeLists.txt  main.cpp  uci.hpp
app/math/: dimension.hpp  dimensions.hpp  rect.hpp
app/movegen/: attacks.hpp  magic.hpp  movegen.cpp  movegen.hpp
app/moves/: magic.hpp  move.hpp  movegen.cpp  movegen.hpp
app/position/: magic.hpp  move_list.hpp  position.cpp  position.hpp
app/renderer/: glfw_wrapper.cpp  glfw_wrapper.hpp  imgui_wrapper.cpp  renderer.cpp  renderer.hpp
app/types/: bitboard.hpp  castling.hpp  color.hpp  direction.hpp  en_passant.hpp  file.hpp  halfmove.hpp  move.hpp  move_flag.hpp  move_type.hpp  piece.hpp  piece_type.hpp  promotion.hpp  rank.hpp  square.hpp  undo_info.hpp
app/uci/: uci.hpp
app/utils/: resource_manager.hpp  resources.cpp  resources.hpp
docker/: Dockerfile.dev  Dockerfile.rel
docs/html/: annotated.html  annotated_dup.js  app__info_8hpp_source.html  app__state_8hpp_source.html  attacks_8hpp_source.html  bit__operations_8hpp_source.html  bitboard_8hpp_source.html  board__view_8hpp_source.html  captured__pieces_8hpp_source.html  castling_8hpp_source.html  classAppState-members.html  classAppState.html  classAppState.js  classAttackGenerator-members.html  classAttackGenerator.html  classBitboard-members.html  classBitboard.html  classBoardView-members.html  classBoardView.html  classCapturedPieces-members.html  classCapturedPieces.html  classDemoWindow-members.html  classDemoWindow.html  classEngine-members.html  classEngine.html  classGLFWWrapper-members.html  classGLFWWrapper.html  classGLFWwindow.html  classGame-members.html  classGame.html  classGameInfo-members.html  classGameInfo.html  classGameView-members.html  classGameView.html  classGlfwWrapper-members.html  classGlfwWrapper.html  classGui-members.html  classGui.html  classHistory-members.html  classHistory.html  (+219 more)
docs/html/search/: all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_c.js  classes_f.js  functions_0.js  functions_1.js  searchdata.js
project/: main.cpp  main1.cpp
project/include/: bitboard.hpp  castling.hpp  constants.hpp  error_bus.hpp  error_handler.hpp  game.hpp  glfw_wrapper.hpp  imgui_wrapper.hpp  input_handler.hpp  layout_manager.hpp  macros.hpp  move.hpp  navigation.hpp  paths.hpp  piece.hpp  position.hpp  precomputed.hpp  renderer.hpp  resource_manager.hpp  resources.hpp  square.hpp  texture_loader.hpp  types.hpp  utils.hpp
project/include/board/: bitboard.hpp  bitboards.hpp  castling.hpp  coordinate.hpp  direction.hpp  init.hpp  move.hpp  navigation.hpp  piece.hpp  square.hpp  types.hpp
project/include/game/: app_state.hpp  game.hpp  position.hpp
project/include/movegen/: attacks.hpp  magic.hpp  magics.hpp  movegen.hpp
project/include/renderer/: glfw_wrapper.hpp  imgui_wrapper.hpp  renderer.hpp
project/include/uci/: uci.hpp
project/include/utils/: iterator.hpp  operators.hpp  resource_manager.hpp  resources.hpp  utils.hpp
project/resource/: pack_resources.sh
project/source/: bitboard.cpp  error_bus.cpp  error_handler.cpp  game.cpp  glfw_wrapper.cpp  imgui_wrapper.cpp  input_handler.cpp  navigation.cpp  position.cpp  precomputed.cpp  renderer.cpp  resouce_manager.cpp  texture_loader.cpp  utils.cpp
project/source/board/: bitboard.cpp  bitboards.cpp  square.cpp
project/source/game/: position.cpp
project/source/movegen/: magic.cpp  movegen.cpp
project/source/renderer/: glfw_wrapper.cpp  imgui_wrapper.cpp  renderer.cpp
project/tests/: bitboard.cpp  move.cpp  navigation.cpp  perft.cpp  pieces.cpp  position.cpp  shell.sh
scripts/: CMakeLists.txt  perft.sh  py.py
scripts/compare_perft/: CMakeLists.txt  main.cpp
scripts/format/: clang-format.sh
scripts/pack_resources/: script.sh
scripts/perft_compare/: main.cpp
scripts/tests/: generate_perft.sh
tests/: CMakeLists.txt  bitboard.cpp  move.cpp  perft.cpp  position.cpp
tools/: check-format.sh  cppcheck.sh  format.sh  tidy.sh
(+2 files in other folders)
